# ProjectsForResume

./: .gitattributes  README.md
2023 MCM Problem B/: README.md
Data Structure and Algorithm Course Outpus/Project2 - STL-like Hash Table/: hashtable.hpp
Data Structure and Algorithm Course Outpus/Project3 -  STL-like K-D Tree/: kdtree.hpp
Data Structure and Algorithm Course Outpus/Project4 - Find the Shortest Path in a Given Directed Graph/: shortestP2P.hpp
Intermediate Programming Course Outputs/Final Project - Find What to Eat in Ann Arbor Combing Python , HTML and JSON/: ann_arbor_restaurants.json  graph.json
Intermediate Programming Course Outputs/Project1- Line Tool for Searching in iTunes Store/: iTunesTestCode.py  iTunes_22718930.py  sample_json.json
Intermediate Programming Course Outputs/Project2 - 20 Questions Game as a Tree/: Proj2_skeleton.py  no  tree1.txt
NBA Continuous Lead Duration Analysis/: 20240106.ipynb  20240106_2.ipynb  20240218.py  20240218_2.py  20240218_3.py  2024_2_18.py  README.md  merge_Xi.ipynb
NBA Continuous Lead Duration Analysis/PPT/: 2024-02-01.pptx
Natural Language Processing Course Outputs/Homework2 - Sentiment Analysis (Word2Vec)/: common-mwes.txt  test_predictions.csv  test_predictions1.csv  ~$630_HW2_Report.docx
Programming and Elementary Data Structures Course Outputs/Lab6/: CMakeLists.txt  Makefile  l6  main
Programming and Elementary Data Structures Course Outputs/Lab6/plugins/add/: add.cpp
Programming and Elementary Data Structures Course Outputs/Lab6/plugins/styled/: styled.cpp
(+364 files in other folders)
